# sudoku

./: .cproject  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.txt  README.txt~  config.status  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.1  traces.2  traces.3
src/: board_helper.c~  board_helper.h  board_helper.h~  config.h  digit_helper.cpp  digit_helper.h  digit_helper.h~  glut_func.c~  glut_func.h~  main.c  main.cpp  main.c~
src/.deps/: board_helper.Po  digit_helper.Po  glut_func.Po  main.Po
test/: CMakeLists.txt
test/src/: board_helper.cpp  board_helper.hpp  digit_helper.cpp  digit_helper.hpp  glut_func.cpp  glut_func.hpp  main.cpp
