bin_PROGRAMS = sudoku

#files of project
sudoku_SOURCES = src/main.cpp src/board_helper.cpp src/board_helper.h src/digit_helper.cpp src/digit_helper.h src/glut_func.cpp src/glut_func.h

#using an m4 directory for macros
ACLOCAL_AMFLAGS = -I m4 --install

#letting autoconf know about the m4 dir
EXTRA_DIST = m4/NOTES
